Cambio de correo

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Alumno: Pablo Piñeiro Vidal</h2>
     <p>
         Puedes contactarme aquí: 
-        <a href="mailto:tu-email@ejemplo.com">Enviar correo electrónico</a>
+        <a href="mailto:p.pvidal@udc.es">Enviar correo electrónico</a>
     </p>
 
     <hr>
